Run Perfmonkey tests on http://saucelabs.com

--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://saucelabs.com","creator":"http://perfmonkey.com","rand":0.3570693756919354,"created_at":"2014-07-07T17:44:09.464Z"}
